syntax = "proto3";

package loadtest;

option go_package = "cloudlab-single-node/proto;proto";

message InvokeRequest {
  // Unique request id generated by client.
  string id = 1;

  // Work to perform on server: CPU spin in milliseconds.
  int64 work_ms = 2;

  // Client-side send time (Unix nanos) for E2E measurement.
  int64 client_send_unix_nano = 3;
}

message InvokeReply {
  string id = 1;
  string ack = 2;

  // Server timing (Unix nanos) for analysis.
  int64 server_recv_unix_nano = 3;
  int64 server_send_unix_nano = 4;

  // Optional: worker instance label to help debug in multi-replica scenarios.
  string worker_instance = 5;
}

service Worker {
  rpc Invoke(InvokeRequest) returns (InvokeReply);
}
